--- a/DNA Project/dna_analysis.ipynb
+++ b/DNA Project/dna_analysis.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +91,7 @@
     "\n",
     "# 전처리\n",
     "dna = read_seq('result_data.txt')\n",
+    "# print(dna)\n",
     "\n",
     "# protein 변환\n",
     "result = convert(dna[20:935])\n",
